--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,9 @@ coroutines = "1.10.2"         # Corrected
 junit = "4.13.2"
 androidxTestExtJunit = "1.1.5"
 espressoCore = "3.5.1"
+material = "1.12.0" #Or check for the absolute latest stable version
+coreSplashScreen = "1.0.1" #// Or 1.0.0, ensure it's a known good version
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,7 +27,7 @@ androidx-activity-compose = { group = "androidx.activity", name = "activity-comp
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+    androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-material-iconsCore = { group = "androidx.compose.material", name = "material-icons-core" }
@@ -41,6 +44,14 @@ androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version
 androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" } # Version managed by BOM
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest"} # Version managed by BOM
+
+# ... your existing libraries ...
+google-android-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+# Make sure you have core-splashscreen if you intend to use it, let's add it here for completeness
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version = "1.0.1" } #// Assuming 1.0.1 or check latest
+
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
