--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ androidxTestExtJunit = "1.1.5"
 espressoCore = "3.5.1"
 material = "1.12.0" #Or check for the absolute latest stable version
 coreSplashScreen = "1.0.1" #// Or 1.0.0, ensure it's a known good version
-
+datastorePrefs = "1.1.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -50,7 +50,7 @@ google-android-material = { group = "com.google.android.material", name = "mater
 
 # Make sure you have core-splashscreen if you intend to use it, let's add it here for completeness
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version = "1.0.1" } #// Assuming 1.0.1 or check latest
-
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePrefs" }
 
 
 [plugins]
