--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,42 +1,54 @@
 [versions]
-agp = "8.10.1"
+agp = "8.5.0"
 kotlin = "2.0.0"
-compileSdkNum = "35" # Renamed for clarity as it's a number
-minSdkNum = "26"
-targetSdkNum = "35"
+compileSdkNum = "34"
+minSdkNum = "24"
+targetSdkNum = "34"
 
+# AndroidX and Google Libraries
 coreKtx = "1.13.1"
-lifecycleRuntimeKtx = "2.9.0" # Corrected
-activityCompose = "1.10.0"    # Corrected
+lifecycleRuntimeKtx = "2.8.2"  # 修正：2.9.0 是 alpha 版本，使用最新的稳定版 2.8.2 更稳妥
+activityCompose = "1.9.0"     # 修正：1.10.0 是 alpha 版本，使用最新的稳定版 1.9.0
 composeBom = "2024.05.00"
-composeCompiler = "1.5.13"
-navigationCompose = "2.9.0"   # Corrected
-coroutines = "1.10.2"         # Corrected
+composeCompiler = "1.5.14"
+navigationCompose = "2.7.7"   # 修正：2.9.0 是 alpha 版本，使用最新的稳定版 2.7.7
+coroutines = "1.8.1"          # 核心修正：这是 kotlinx-coroutines 的最新稳定版本
+material = "1.12.0"
+coreSplashScreen = "1.0.1"
+datastorePrefs = "1.1.1"
+
 # Test libraries
 junit = "4.13.2"
 androidxTestExtJunit = "1.1.5"
 espressoCore = "3.5.1"
-material = "1.12.0" #Or check for the absolute latest stable version
-coreSplashScreen = "1.0.1" #// Or 1.0.0, ensure it's a known good version
-datastorePrefs = "1.1.1"
+
 
 [libraries]
+# AndroidX Core
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+
+# Jetpack Compose
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-    androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-material-iconsCore = { group = "androidx.compose.material", name = "material-icons-core" }
 androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
-# Ensure lifecycle-viewmodel-compose uses the same lifecycle version
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+
+# Coroutines
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
+
+# Other Google & AndroidX Libraries
+google-android-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashScreen" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePrefs" }
 
 # Test libraries
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -45,13 +57,6 @@ androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espres
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" } # Version managed by BOM
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest"} # Version managed by BOM
 
-# ... your existing libraries ...
-google-android-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-
-# Make sure you have core-splashscreen if you intend to use it, let's add it here for completeness
-androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version = "1.0.1" } #// Assuming 1.0.1 or check latest
-androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePrefs" }
-
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -59,7 +64,8 @@ jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "k
 jetbrainsKotlinCompose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 [bundles]
-# Example:
+# 您可以将一组相关的库捆绑在一起，方便在 build.gradle.kts 中一次性导入
+# 这是一个示例，您可以根据需要取消注释并使用
 # compose = [
 #     "androidx-compose-ui",
 #     "androidx-compose-ui-graphics",
